# Mp3Man

./: CMakeLists.txt  README.md  main.cpp  updater.cpp  updater.h  window.cpp  window.h  window.ui  youtube.cpp  youtube.h
libs/QNotifier/: CMakeLists.txt  QChoiceNotifier.cpp  QChoiceNotifier.h  QNotifier.cpp  QNotifier.h  styles.h
